# musilingo_new

./: .gitignore  CLAUDE.md  README.md  SOLFEGE_IMPLEMENTATION_SPEC.md  SOLFEGE_MIGRATION_CHANGES.md  SOLFEGE_VEROVIO_MIGRATION.md  VEROVIO_FFI_IMPLEMENTATION.md  pubspec.yaml
.claude/: settings.local.json
ai_server/: Dockerfile  app.py  requirements.txt
android/app/: build.gradle.kts
assets/osmd_viewer/: index.html
assets/osmd_viewer/js/: main.js
assets/sf2/: Standard_Drum_Kit.sf2
database/: create_solfege_progress_table.sql  expanded_solfege_exercises.sql  expanded_solfege_exercises_revised.sql  solfege_exercises_intervals_basic.sql
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/controllers/: agent_controller.dart
lib/app/core/: error_handler.dart  (+3 more)
lib/services/: ai_realtime_score_service.dart  canvas_music_renderer.dart  musicxml_to_canvas_converter.dart  precise_musicxml_service.dart  verovio_service.dart
lib/widgets/: animated_score_widget.dart  canvas_music_widget.dart  metronome_widget.dart  verovio_score_widget.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
supabase/: config.toml
verovio_flutter/android/src/main/cpp/: CMakeLists.txt
verovio_flutter/src/: verovio_flutter.cpp
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+112 files in other folders)
